fix color contrast issue on the link when high contrast mode is on

--- a/src/popup/components/ad-hoc-tools-panel.scss
+++ b/src/popup/components/ad-hoc-tools-panel.scss
@@ -26,6 +26,7 @@
         margin-top: 24px;
 
         .link {
+            color: $link !important;
             font-size: 11px;
         }
 
